--- a/TextIdVisualiser/packages.config
+++ b/TextIdVisualiser/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.VisualStudio.CoreUtility" version="16.0.467" targetFramework="net472" />
+  <package id="Microsoft.PowerShell.5.ReferenceAssemblies" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.PowerShell.SDK" version="7.0.0-preview.1" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="16.1.89" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.ImageCatalog" version="16.1.28916.169" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Imaging" version="16.1.28917.181" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.26930" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Language" version="16.1.89" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Language.Intellisense" version="16.1.89" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.27" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Shell.15.0" version="16.1.28917.181" targetFramework="net472" />
@@ -17,7 +21,9 @@
   <package id="Microsoft.VisualStudio.Shell.Interop.15.6.DesignTime" version="15.6.27413" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50728" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30730" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Text.Data" version="16.0.428" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Text.Data" version="16.1.89" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Text.Logic" version="16.1.89" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Text.UI" version="16.1.89" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6071" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50728" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Threading" version="16.0.102" targetFramework="net472" />
@@ -27,6 +33,14 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net472" />
   <package id="StreamJsonRpc" version="2.0.167" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Composition" version="4.6.0-preview5.19224.8" targetFramework="net472" />
+  <package id="System.Composition" version="1.3.0-preview5.19224.8" targetFramework="net472" />
+  <package id="System.Composition.AttributedModel" version="1.3.0-preview5.19224.8" targetFramework="net472" />
+  <package id="System.Composition.Convention" version="1.3.0-preview5.19224.8" targetFramework="net472" />
+  <package id="System.Composition.Hosting" version="1.3.0-preview5.19224.8" targetFramework="net472" />
+  <package id="System.Composition.Runtime" version="1.3.0-preview5.19224.8" targetFramework="net472" />
+  <package id="System.Composition.TypedParts" version="1.3.0-preview5.19224.8" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Pipelines" version="4.5.3" targetFramework="net472" />
   <package id="System.Memory" version="4.5.2" targetFramework="net472" />
@@ -42,4 +56,7 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="VSSDK.CoreUtility" version="12.0.4" targetFramework="net472" />
+  <package id="VSSDK.IDE.12" version="12.0.4" targetFramework="net472" />
+  <package id="VSSDK.Text" version="12.0.4" targetFramework="net472" />
 </packages>
